fix: harden release, sync, and runtime flows
Tighten release automation, SyncHub persistence, updater rollback, and several module lifecycle/runtime edge cases so the project builds and tests cleanly after the audit pass.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>